generate functional reporter md